Add some tests for :data